# rust-browser

./: .gitignore  Cargo.toml  justfile
flatpak/: application.sh  cargo-sources.json  com.github.LegitCamper.Rust-Browser.desktop  com.github.LegitCamper.Rust-Browser.json  com.github.LegitCamper.Rust-Browser.metainfo.xml
src/: main.rs
