[package]
name = "rust-browser"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = "debuginfo"
panic = "abort"
incremental = true

[profile.release-lto]
inherits = "release"
codegen-units = 1
opt-level = 3
lto = "fat"

[profile.dev]
incremental = true
opt-level = "s"
lto = "thin"

[features]
default = []
# used in ci to disable icy_browser's build.rs
ci = ["icy_browser/ci"]


[dependencies]
iced = "0.13.1"
[dependencies.icy_browser]
git = "https://github.com/LegitCamper/icy_browser"
default-features = false
features = ["webkit"]
